--- a/numgame/numgame.csproj
+++ b/numgame/numgame.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CommandBase.cs" />
     <Compile Include="GuessResponse.cs" />
     <Compile Include="RegistrationResponse.cs" />
     <Page Include="MainWindow.xaml">
