--- a/RaktarSzerver/RaktarSzerver.csproj
+++ b/RaktarSzerver/RaktarSzerver.csproj
@@ -45,7 +45,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DBConnection.cs" />
-    <Compile Include="SQLTasks\ProductGetAmount.cs" />
+    <Compile Include="SQLTasks\Authentication.cs" />
+    <Compile Include="SQLTasks\ProductTasks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
