REST konfiguráció, adatbázisok hozzáadva

--- a/RestService/Web.config
+++ b/RestService/Web.config
@@ -12,15 +12,26 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.serviceModel>
+    <services>
+      <service name="RestService.RestService" behaviorConfiguration="ServiceBehavior" >
+        <endpoint address="" binding="webHttpBinding" contract="RestService.IRestService" behaviorConfiguration="web">
+        </endpoint>
+      </service>
+    </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior>
+        <behavior name="ServiceBehavior">
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp/>
+        </behavior>
+      </endpointBehaviors>
     </behaviors>
     <protocolMapping>
       <add binding="basicHttpsBinding" scheme="https" />
