--- a/RestService/RestService.csproj
+++ b/RestService/RestService.csproj
@@ -88,18 +88,31 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DBConnection\IConnection.cs" />
     <Compile Include="DBConnection\MSSQLConnection.cs" />
     <Compile Include="DBConnection\SQLiteConn.cs" />
     <Compile Include="DBTasks\IDatabase.cs" />
+    <Compile Include="DBTasks\MSSQLDatabase.cs" />
+    <Compile Include="DBTasks\SQLiteDatabase.cs" />
     <Compile Include="IRestService.cs" />
+    <Compile Include="Model\AddProductRequest.cs" />
+    <Compile Include="Model\CheckProductRequest.cs" />
+    <Compile Include="Model\DeleteProductRequest.cs" />
+    <Compile Include="Model\ListLocationsResponse.cs" />
+    <Compile Include="Model\ListProductsByLocationRequest.cs" />
+    <Compile Include="Model\ListProductsResponse.cs" />
     <Compile Include="Model\Location.cs" />
+    <Compile Include="Model\LoginRequest.cs" />
+    <Compile Include="Model\LoginResponse.cs" />
     <Compile Include="Model\Product.cs" />
+    <Compile Include="Model\Request.cs" />
+    <Compile Include="Model\Response.cs" />
+    <Compile Include="Model\TransferProductRequest.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestService.svc.cs">
       <DependentUpon>RestService.svc</DependentUpon>
     </Compile>
+    <Compile Include="Token.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
