--- a/EladoKliens/EladoKliens.csproj
+++ b/EladoKliens/EladoKliens.csproj
@@ -35,11 +35,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
@@ -60,6 +65,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\ListLocationsResponse.cs" />
+    <Compile Include="Model\ListProductsResponse.cs" />
+    <Compile Include="Model\Location.cs" />
+    <Compile Include="Model\LoginResponse.cs" />
+    <Compile Include="Model\Product.cs" />
+    <Compile Include="Model\RelayCommand.cs" />
+    <Compile Include="Model\Response.cs" />
+    <Compile Include="Model\RestConnection.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -70,6 +83,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.hu-HU.resx</DependentUpon>
     </Compile>
+    <Compile Include="VisibilityConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
