--- a/Mandelbrot_OpenMP/Mandelbrot_OpenMP.vcxproj
+++ b/Mandelbrot_OpenMP/Mandelbrot_OpenMP.vcxproj
@@ -100,6 +100,8 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <MultiProcessorCompilation>false</MultiProcessorCompilation>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
