CUDA homework: fix CMake test

--- a/parallel/cuda/CMakeLists.txt
+++ b/parallel/cuda/CMakeLists.txt
@@ -11,7 +11,7 @@ IF(WIN32)
   add_test(OutputEllenorzes powershell ./test.ps1 5 matrix.txt)
   set_tests_properties(OutputEllenorzes PROPERTIES PASS_REGULAR_EXPRESSION "0 2")
   add_test(OutputEllenorzes2 powershell ./test.ps1 5 matrix2.txt)
-  set_tests_properties(OutputEllenorzes PROPERTIES PASS_REGULAR_EXPRESSION "")
+  set_tests_properties(OutputEllenorzes2 PROPERTIES PASS_REGULAR_EXPRESSION "")
 ELSE()
   add_test(OutputEllenorzes ./test.sh 5 matrix.txt)
   set_tests_properties(OutputEllenorzes PROPERTIES PASS_REGULAR_EXPRESSION "0 2")
