CUDA homework: add time measurement

--- a/parallel/cuda/CMakeLists.txt
+++ b/parallel/cuda/CMakeLists.txt
@@ -3,6 +3,7 @@ project(hf1)
 
 include(CTest)
 
+add_executable(randomgen randomgen.c)
 add_executable(hf1 matrix_avg.c)
 
 add_test(NincsArgumentum hf1)
@@ -12,9 +13,13 @@ IF(WIN32)
   set_tests_properties(OutputEllenorzes PROPERTIES PASS_REGULAR_EXPRESSION "0 2")
   add_test(OutputEllenorzes2 powershell ./test.ps1 5 matrix2.txt)
   set_tests_properties(OutputEllenorzes2 PROPERTIES PASS_REGULAR_EXPRESSION "")
+  add_test(Idomeres1k powershell ./measure_time.ps1 1000 matrix1k.txt)
+  add_test(Idomeres10k powershell ./measure_time.ps1 10000 matrix10k.txt)
 ELSE()
   add_test(OutputEllenorzes ./test.sh 5 matrix.txt)
   set_tests_properties(OutputEllenorzes PROPERTIES PASS_REGULAR_EXPRESSION "0 2")
   add_test(OutputEllenorzes2 ./test.sh 5 matrix2.txt)
   set_tests_properties(OutputEllenorzes2 PROPERTIES PASS_REGULAR_EXPRESSION "")
+  add_test(Idomeres1k ./measure_time.sh 1000 matrix1k.txt)
+  add_test(Idomeres10k ./measure_time.sh 10000 matrix10k.txt)
 ENDIF()
